--- a/meson.build
+++ b/meson.build
@@ -6,7 +6,7 @@
 # \library     nsm66
 # \author      Chris Ahlstrom
 # \date        2025-01-29
-# \updates     2025-03-08
+# \updates     2025-10-05
 # \license     $XPC_SUITE_GPL_LICENSE$
 #
 #  This file is part of the "nsm66" library. It was part of the libs66
@@ -203,16 +203,19 @@ cdata.set('lo_h', cc.has_header('lo/lo.h'))
 
 if nsm66_use_potext
 
+   libpotext_dep = subproject('libpotext').get_variable('libpotext_dep')
    libpotext_library_dep = dependency(
       'libpotext', fallback : [ 'libpotext', 'libpotext_dep' ]
       )
 
 endif
 
+liblib66_dep = subproject('liblib66').get_variable('liblib66_dep')
 liblib66_library_dep = dependency(
    'liblib66', fallback : [ 'liblib66', 'liblib66_dep' ]
    )
 
+libcfg66_dep = subproject('libcfg66').get_variable('libcfg66_dep')
 libcfg66_library_dep = dependency(
    'libcfg66', fallback : [ 'libcfg66', 'libcfg66_dep' ]
    )
